# inra

./: .gitignore  LICENSE  README.md  apa  build_packages.sh  inra  inra.desktop  inra.py
.github/workflows/: release.yml
gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
